--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <div id="feedback"><p>Enter your information above to calculate your solar needs.</p></div>
 </main>
 <footer>
-<p>Created by Paul Cheney for a Pluralsight course on JavaScript</p>
+<p>Created by Paul Cheney for a Pluralsight course on JavaScript | Alice Marin's Github </p>
 </footer>
 
 </body>
