--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, user-scalable=no">
-<title>Best Solar</title>
+<title>Alice's Solar Calculator</title>
+<link rel="icon" type="image/x-icon" href="/images/favicon.png">
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,700" rel="stylesheet">
 <link href="css/styles.css" rel="stylesheet" type="text/css">
 
